--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,4 +23,8 @@
         </intent-filter>
       </activity>
     </application>
+    <!-- <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyDuOuUTJcRYaiGsg8NoW02_l09sdnquYms"
+     /> -->
 </manifest>
