--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-maps": "^1.3.2",
     "react-native-svg": "^13.6.0"
   },
   "devDependencies": {
