--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
   package="com.potholesdetection">
 
     <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
       android:name=".MainApplication"
@@ -22,5 +24,10 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <meta-data android:name="com.google.android.gms.version" 
+            android:value="@integer/google_play_services_version"/>
+      <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyD7IfqCPAHjizbBiyG2X2hOc8mUdfuN4hA" />
     </application>
 </manifest>
