--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fontsource/poppins": "^4.5.10",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-maps": "^1.3.2"
