--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.1.2",
