--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@react-navigation/native-stack": "^6.9.7",
     "@react-navigation/stack": "^6.3.10",
     "axios": "^1.2.2",
+    "jetifier": "^2.0.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-picker": "^5.0.0",
+    "react-native-image-video-picker-editor": "^1.0.15",
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.1.2",
     "react-native-reanimated": "^2.13.0",
