--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.3.10",
     "axios": "^1.2.2",
     "jetifier": "^2.0.0",
+    "lottie-react-native": "^5.1.5",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-chart-kit": "^6.12.0",
