--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@react-navigation/stack": "^6.3.10",
+    "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.2.2",
     "jetifier": "^2.0.0",
     "lottie-react-native": "^5.1.5",
@@ -33,7 +34,11 @@
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-video-player": "^0.14.0"
+    "react-native-video-player": "^0.14.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
